<resources>
    <string name="app_name">Registro de Canal</string>

    <string name="tv_codigo">Código : </string>
    <string name="tv_abrevitura">Abreviatura : </string>
    <string name="tv_descripcion">Descripción : </string>
    <string name="tv_trama_canal">Cada campo de un color diferente</string>

    <string name="tv_codigo_ini">TM</string>
    <string name="tv_abrevitura_ini">ATM</string>
    <string name="tv_descripcion_ini">ATM PÚBLICO</string>
    <string name="tv_trama_canal_ini">Código | Abreviatura | Descripción</string>
    <string name="tv_texto_por_color">Código Color1 | Abreviatura Color2 | Descripción Color3</string>
    <string name="tv_style_texto">Código Style1 | Abreviatura Style2 | Descripción Style3</string>

    <string name="btn_enviar">Enviar</string>
</resources>
